--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ async-timeout==4.0.3
 attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.2.1
 datasets==2.17.1
 dill==0.3.8
 filelock==3.13.1
