--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,22 @@ attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.2.1
+contourpy==1.3.2
+cycler==0.12.1
 datasets==2.17.1
 dill==0.3.8
 filelock==3.13.1
+fonttools==4.57.0
 frozenlist==1.4.1
 fsspec==2023.10.0
 huggingface-hub==0.21.1
 idna==3.6
+ipywidgets==8.1.6
 Jinja2==3.1.3
+jupyterlab_widgets==3.0.14
+kiwisolver==1.4.8
 MarkupSafe==2.1.5
+matplotlib==3.10.1
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
@@ -23,17 +30,16 @@ numpy==1.26.4
 packaging==23.2
 pandas==2.2.1
 pillow==10.2.0
-psutil==6.0.0
 pyarrow==15.0.0
 pyarrow-hotfix==0.6
+pyparsing==3.2.3
 python-dateutil==2.8.2
 pytz==2024.1
 PyYAML==6.0.1
-rdkit-pypi==2022.9.5
+rdkit==2022.9.5
 regex==2023.12.25
 requests==2.31.0
 safetensors==0.4.2
-six==1.16.0
 sympy==1.12
 tokenizers==0.15.2
 torch==2.2.1
@@ -45,5 +51,6 @@ transformers==4.38.1
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+widgetsnbextension==4.0.14
 xxhash==3.4.1
 yarl==1.9.4
